setup of CategoryModal and request api to get MoviesByGenre

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 
 @import "tailwindcss";
 
+body {
+  font-family: Bebas Neue, sans-serif;
+}
+
 header {
   font-family: 'Sixtyfour Convergence', sans-serif;
 }
