added some css to ModalCategory and new Arrow for scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,12 @@ header {
 .movie-detail-description {
   font-family: 'Bebas Neue', sans-serif;
 }
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hidden {
+  /* -ms-overflow-style: none;
+  scrollbar-width: none; */
+}
